[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "roadcrypto"
version = "0.1.0"
description = "Cryptography Utilities for BlackRoad"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "black", "mypy"]
